--- a/homepage/index.html
+++ b/homepage/index.html
@@ -189,23 +189,28 @@
                 
                 <!-- Right Side - Booking Form -->
                 <div class="bg-gray-800 rounded-xl p-6 sm:p-8 lg:p-10">
-                    <form class="space-y-4 sm:space-y-6">
+                    <form id="homepage-contact-form" action="https://api.web3forms.com/submit" method="POST" class="space-y-4 sm:space-y-6">
+                        <input type="hidden" name="access_key" value="4f818701-dc75-4caf-9750-de40cc236091">
+                        <input type="hidden" name="redirect" value="false">
+                        <input type="hidden" name="subject" value="New Appointment Request from Pchris Autos">
+                        <input type="hidden" name="from_name" value="Pchris Autos Website">
+
                         <div>
                             <label class="block text-sm font-medium mb-2">Full Name</label>
-                            <input type="text" placeholder="Full Name" class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
+                            <input type="text" name="name" placeholder="Full Name" required class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
                         </div>
                         <div>
                             <label class="block text-sm font-medium mb-2">Phone Number</label>
-                            <input type="tel" placeholder="+234" class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
+                            <input type="tel" name="phone" placeholder="+234" required class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
                         </div>
                         <div>
                             <label class="block text-sm font-medium mb-2">Email Address</label>
-                            <input type="email" placeholder="Email Address" class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
+                            <input type="email" name="email" placeholder="Email Address" required class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
                         </div>
                         <div>
                             <label class="block text-sm font-medium mb-2">Preferred Date</label>
                             <div class="relative">
-                                <input type="date" class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
+                                <input type="date" name="preferred_date" class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent">
                                 <svg class="absolute right-4 top-1/2 transform -translate-y-1/2 w-5 h-5 text-gray-400 pointer-events-none" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                                 </svg>
@@ -213,7 +218,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium mb-2">Message / Car of Interest</label>
-                            <textarea rows="4" placeholder="I am interested in the..." class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent resize-none"></textarea>
+                            <textarea rows="4" name="message" placeholder="I am interested in the..." required class="w-full bg-gray-900 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent resize-none"></textarea>
                         </div>
                         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-semibold text-base sm:text-lg transition-colors">
                             Request Appointment
@@ -313,7 +318,7 @@
             <!-- Copyright -->
             <div class="border-t border-gray-800 pt-6 sm:pt-8">
                 <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
-                    <p class="text-gray-400 text-sm sm:text-base">© 2024 Pchris Autos. All rights reserved.</p>
+                    <p class="text-gray-400 text-sm sm:text-base">©️ 2026 Pchris Autos. All rights reserved.</p>
                     <div class="flex space-x-4 sm:space-x-6">
                         <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Privacy Policy</a>
                         <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Terms of Service</a>
@@ -322,6 +327,29 @@
             </div>
         </div>
     </footer>
+
+    <div id="success-modal" class="hidden fixed inset-0 z-50 overflow-y-auto">
+        <div class="flex min-h-screen items-center justify-center px-4 py-6">
+            <div class="fixed inset-0 bg-black/70 backdrop-blur-sm transition-opacity"></div>
+
+            <div class="relative bg-gray-800 rounded-2xl shadow-2xl max-w-md w-full p-6 sm:p-8 border border-gray-700">
+                <div class="mx-auto flex items-center justify-center h-16 w-16 rounded-full bg-green-500/10 mb-4">
+                    <svg class="h-10 w-10 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                </div>
+
+                <h3 class="text-2xl font-bold text-center text-white mb-2">Thank You!</h3>
+                <p class="text-center text-gray-300 mb-6">
+                    Thank you for contacting us! One of our team members will reach out to you within 24 hours.
+                </p>
+
+                <button onclick="closeModal()" class="w-full bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg font-semibold text-base transition-colors">
+                    Close
+                </button>
+            </div>
+        </div>
+    </div>
 
     <!-- Mobile Menu Script -->
     <script>
@@ -334,6 +362,51 @@
           mobileToggle.setAttribute('aria-expanded', expanded ? 'false' : 'true');
         });
       }
+
+      const form = document.getElementById('homepage-contact-form');
+      if (form) {
+        form.addEventListener('submit', async (e) => {
+          e.preventDefault();
+
+          const formData = new FormData(form);
+          const submitButton = form.querySelector('button[type="submit"]');
+          const originalText = submitButton.textContent;
+
+          submitButton.disabled = true;
+          submitButton.textContent = 'Sending...';
+
+          try {
+            const response = await fetch('https://api.web3forms.com/submit', {
+              method: 'POST',
+              body: formData
+            });
+
+            const data = await response.json();
+
+            if (data.success) {
+              document.getElementById('success-modal').classList.remove('hidden');
+              form.reset();
+            } else {
+              alert('Something went wrong. Please try again or contact us directly.');
+            }
+          } catch (error) {
+            alert('Something went wrong. Please try again or contact us directly.');
+          } finally {
+            submitButton.disabled = false;
+            submitButton.textContent = originalText;
+          }
+        });
+      }
+
+      function closeModal() {
+        document.getElementById('success-modal').classList.add('hidden');
+      }
+
+      document.getElementById('success-modal')?.addEventListener('click', (e) => {
+        if (e.target.id === 'success-modal') {
+          closeModal();
+        }
+      });
     </script>
     <!-- WhatsApp Sticky Widget -->
     <a
@@ -349,4 +422,3 @@
     </a>
 </body>
 </html>
-
