fix: update project root

--- a/Contactus/contactus.html
+++ b/Contactus/contactus.html
@@ -35,14 +35,14 @@
       <header class="border-b border-slate-800 bg-surface-800/95 backdrop-blur">
         <div class="mx-auto flex w-full items-center justify-between px-10 py-4 md:px-[60px] lg:px-20">
           <!-- Logo -->
-          <a href="../homepage/index.html" class="flex items-center gap-3">
-            <img src="../homepage/logopchris.svg" alt="Pchris Autos Logo" class="h-8 w-auto sm:h-9" />
+          <a href="../index.html" class="flex items-center gap-3">
+            <img src="../logopchris.svg" alt="Pchris Autos Logo" class="h-8 w-auto sm:h-9" />
             <span class="hidden text-sm font-semibold tracking-wide text-slate-100 sm:inline">Pchris Autos</span>
           </a>
 
           <!-- Centered Nav -->
           <nav class="hidden flex-1 justify-center text-sm font-medium text-slate-300 sm:flex sm:items-center sm:gap-6">
-            <a href="../homepage/index.html" class="transition hover:text-white">Home</a>
+            <a href="../index.html" class="transition hover:text-white">Home</a>
             <a href="../Inventory page/inventory.html" class="transition hover:text-white">Inventory</a>
             <a href="../Aboutus/aboutus.html" class="transition hover:text-white">About Us</a>
             <a href="./contactus.html" class="text-white">Contact</a>
@@ -76,7 +76,7 @@
           class="hidden border-t border-slate-800 bg-surface-800 sm:hidden"
         >
           <nav class="mx-auto flex w-full flex-col gap-1 px-10 py-3 md:px-[60px] lg:px-20 text-sm font-medium text-slate-200">
-            <a href="../homepage/index.html" class="rounded-md px-2 py-2 hover:bg-surface-700">Home</a>
+            <a href="../index.html" class="rounded-md px-2 py-2 hover:bg-surface-700">Home</a>
             <a href="../Inventory page/inventory.html" class="rounded-md px-2 py-2 hover:bg-surface-700"
               >Inventory</a
             >
@@ -305,7 +305,7 @@
                 <!-- Brand Info -->
                 <div class="sm:col-span-2 lg:col-span-1">
                     <div class="flex items-center mb-4 sm:mb-6">
-                        <img src="../homepage/logopchris.svg" alt="Pchris Autos Logo" class="w-8 h-8 sm:w-10 sm:h-10 object-contain">
+                        <img src="../logopchris.svg" alt="Pchris Autos Logo" class="w-8 h-8 sm:w-10 sm:h-10 object-contain">
                         <span class="ml-2 md:ml-3 text-xl sm:text-2xl font-bold">Pchris Autos</span>
                     </div>
                     <p class="text-gray-400 text-sm sm:text-base leading-relaxed mb-4 sm:mb-6">Experience the pinnacle of automotive engineering. We curate the finest collection of luxury and performance vehicles for the discerning driver.</p>
@@ -316,7 +316,7 @@
                 <div>
                     <h4 class="text-lg sm:text-xl font-semibold mb-4 sm:mb-6">Quick Links</h4>
                     <ul class="space-y-2 sm:space-y-3">
-                        <li><a href="../homepage/index.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Home</a></li>
+                        <li><a href="../index.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Home</a></li>
                         <li><a href="../Inventory page/inventory.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Inventory</a></li>
                         <li><a href="../Aboutus/aboutus.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">About Us</a></li>
                         <li><a href="./contactus.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Contact</a></li>
