--- a/Inventory page/inventory.html
+++ b/Inventory page/inventory.html
@@ -37,14 +37,14 @@
     <header class="border-b border-slate-800 bg-surface-800/95 backdrop-blur">
         <div class="mx-auto flex w-full items-center justify-between px-10 py-4 md:px-[60px] lg:px-20">
                 <!-- Logo -->
-          <a href="../homepage/index.html" class="flex items-center gap-3">
+          <a href="../index.html" class="flex items-center gap-3">
             <img src="logopchris.svg" alt="Pchris Autos Logo" class="h-8 w-auto sm:h-9" />
             <span class="hidden text-sm font-semibold tracking-wide text-slate-100 sm:inline">Pchris Autos</span>
           </a>
                 
           <!-- Centered Nav -->
           <nav class="hidden flex-1 justify-center text-sm font-medium text-slate-300 sm:flex sm:items-center sm:gap-6">
-            <a href="../homepage/index.html" class="transition hover:text-white">Home</a>
+            <a href="../index.html" class="transition hover:text-white">Home</a>
             <a href="./inventory.html" class="transition hover:text-white">Inventory</a>
             <a href="../Aboutus/aboutus.html" class="transition hover:text-white">About Us</a>
             <a href="../Contactus/contactus.html" class="transition hover:text-white">Contact</a>
@@ -78,7 +78,7 @@
           class="hidden border-t border-slate-800 bg-surface-800 sm:hidden"
         >
           <nav class="mx-auto flex w-full flex-col gap-1 px-10 py-3 md:px-[60px] lg:px-20 text-sm font-medium text-slate-200">
-            <a href="../homepage/index.html" class="rounded-md px-2 py-2 hover:bg-surface-700">Home</a>
+            <a href="../index.html" class="rounded-md px-2 py-2 hover:bg-surface-700">Home</a>
             <a href="./inventory.html" class="rounded-md px-2 py-2 hover:bg-surface-700"
               >Inventory</a
             >
@@ -422,7 +422,7 @@
                 <div>
                     <h4 class="text-lg sm:text-xl font-semibold mb-4 sm:mb-6">Quick Links</h4>
                     <ul class="space-y-2 sm:space-y-3">
-                        <li><a href="../homepage/index.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Home</a></li>
+                        <li><a href="../index.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Home</a></li>
                         <li><a href="./inventory.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Inventory</a></li>
                         <li><a href="../Aboutus/aboutus.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">About Us</a></li>
                         <li><a href="../Contactus/contactus.html" class="text-gray-400 hover:text-blue-400 transition-colors text-sm sm:text-base">Contact</a></li>
