--- a/Inventory page/car-details-landcruiser.html
+++ b/Inventory page/car-details-landcruiser.html
@@ -20,6 +20,12 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
         body { font-family: 'Inter', sans-serif; }
+        .glass-effect {
+            background: rgba(17, 24, 39, 0.7);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
@@ -29,7 +35,7 @@
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
             <span class="hidden sm:inline">Back to Inventory</span>
           </a>
-          <a href="https://wa.me/2348032318353?text=Hi%2C%20I'm%20interested%20in%20the%202024%20Toyota%20Land%20Cruiser" target="_blank" rel="noopener noreferrer" class="rounded-md bg-brand px-4 py-2 text-xs font-semibold uppercase tracking-wide text-white shadow-sm transition hover:bg-brand-light inline-flex items-center gap-2">
+          <a href="https://wa.me/2348032318353?text=Hi%2C%20I'm%20interested%20in%20the%202024%20Toyota%20Land%20Cruiser" target="_blank" rel="noopener noreferrer" class="rounded-md bg-blue-600 hover:bg-blue-700 px-4 py-2 text-xs font-semibold uppercase tracking-wide text-white shadow-sm transition inline-flex items-center gap-2">
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
             Contact Us
           </a>
@@ -38,38 +44,37 @@
 
     <main class="pb-12 sm:pb-16 md:pb-20 lg:pb-24">
         <div class="relative">
-            <img src="https://images.unsplash.com/photo-1594502184342-2e12f877aa73?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80" alt="2024 Toyota Land Cruiser" class="w-full h-64 sm:h-80 md:h-96 lg:h-[500px] object-cover">
+            <img src="/Landcuriser.png" alt="2024 Toyota Land Cruiser" class="w-full h-64 sm:h-80 md:h-96 lg:h-[500px] object-cover">
             <div class="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent"></div>
         </div>
 
         <div class="mx-auto w-full px-10 md:px-[60px] lg:px-20 -mt-16 relative z-10">
             <div class="mb-8">
-                <div class="inline-block bg-blue-500 text-white px-6 py-3 rounded-lg font-bold text-2xl sm:text-3xl mb-4">₦95,000,000</div>
-                <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">2024 Toyota Land Cruiser</h1>
+                <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4">2024 Toyota Land Cruiser</h1>
                 <div class="flex flex-wrap gap-2 mb-6">
-                    <span class="bg-gray-700 text-gray-300 px-4 py-2 rounded text-sm font-medium">SUV</span>
-                    <span class="bg-gray-700 text-gray-300 px-4 py-2 rounded text-sm font-medium">OFF-ROAD</span>
-                    <span class="bg-gray-700 text-gray-300 px-4 py-2 rounded text-sm font-medium">4WD</span>
+                    <span class="bg-gray-700 text-gray-300 px-3 py-1 rounded text-xs sm:text-sm font-medium">SUV</span>
+                    <span class="bg-gray-700 text-gray-300 px-3 py-1 rounded text-xs sm:text-sm font-medium">OFF-ROAD</span>
+                    <span class="bg-gray-700 text-gray-300 px-3 py-1 rounded text-xs sm:text-sm font-medium">4WD</span>
                 </div>
             </div>
 
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-10">
-                <div class="bg-gray-800 rounded-xl p-5 text-center">
+                <div class="glass-effect rounded-xl p-5 text-center border border-white/5">
                     <svg class="w-8 h-8 text-blue-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
                     <p class="text-gray-400 text-sm">Year</p>
                     <p class="text-xl font-bold">2024</p>
                 </div>
-                <div class="bg-gray-800 rounded-xl p-5 text-center">
+                <div class="glass-effect rounded-xl p-5 text-center border border-white/5">
                     <svg class="w-8 h-8 text-blue-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
                     <p class="text-gray-400 text-sm">Mileage</p>
                     <p class="text-xl font-bold">5,200 km</p>
                 </div>
-                <div class="bg-gray-800 rounded-xl p-5 text-center">
+                <div class="glass-effect rounded-xl p-5 text-center border border-white/5">
                     <svg class="w-8 h-8 text-blue-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                     <p class="text-gray-400 text-sm">Fuel Type</p>
                     <p class="text-xl font-bold">Petrol</p>
                 </div>
-                <div class="bg-gray-800 rounded-xl p-5 text-center">
+                <div class="glass-effect rounded-xl p-5 text-center border border-white/5">
                     <svg class="w-8 h-8 text-blue-400 mx-auto mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
                     <p class="text-gray-400 text-sm">Transmission</p>
                     <p class="text-xl font-bold">10-Speed Auto</p>
@@ -78,8 +83,8 @@
 
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mb-10">
                 <div class="lg:col-span-2">
-                    <h2 class="text-2xl font-bold mb-4">About This Vehicle</h2>
-                    <div class="text-gray-300 space-y-4 leading-relaxed">
+                    <h2 class="text-xl sm:text-2xl font-bold mb-4">About This Vehicle</h2>
+                    <div class="text-gray-400 text-sm sm:text-base space-y-4 leading-relaxed">
                         <p>The 2024 Toyota Land Cruiser marks the return of an icon. Completely redesigned from the ground up, this legendary SUV combines over 70 years of off-road heritage with modern technology and refined luxury.</p>
                         <p>Powered by a new twin-turbocharged 3.4L V6 engine producing 326 horsepower, the Land Cruiser delivers impressive performance both on and off the road. The advanced full-time 4WD system with Multi-Terrain Select ensures confident handling in any condition.</p>
                         <p>The interior features premium leather seating, a 12.3-inch touchscreen infotainment system, and Toyota Safety Sense 3.0 with a comprehensive suite of driver assistance features. The cabin offers exceptional comfort for long journeys with ample space for passengers and cargo.</p>
@@ -87,8 +92,8 @@
                     </div>
                 </div>
                 <div>
-                    <h2 class="text-2xl font-bold mb-4">Specifications</h2>
-                    <div class="bg-gray-800 rounded-xl p-6 space-y-4">
+                    <h2 class="text-xl sm:text-2xl font-bold mb-4">Specifications</h2>
+                    <div class="glass-effect rounded-xl p-6 space-y-4 border border-white/5">
                         <div class="flex justify-between border-b border-gray-700 pb-3"><span class="text-gray-400">Engine</span><span class="font-medium">3.4L Twin-Turbo V6</span></div>
                         <div class="flex justify-between border-b border-gray-700 pb-3"><span class="text-gray-400">Horsepower</span><span class="font-medium">326 HP</span></div>
                         <div class="flex justify-between border-b border-gray-700 pb-3"><span class="text-gray-400">Torque</span><span class="font-medium">465 lb-ft</span></div>
@@ -102,11 +107,11 @@
             </div>
 
             <div class="flex flex-col sm:flex-row gap-4">
-                <a href="https://wa.me/2348032318353?text=Hi%2C%20I'm%20interested%20in%20the%202024%20Toyota%20Land%20Cruiser%20(₦95%2C000%2C000)" target="_blank" rel="noopener noreferrer" class="flex-1 bg-blue-600 hover:bg-blue-500 px-6 sm:px-8 py-4 rounded-lg font-semibold text-base sm:text-lg transition-colors flex items-center justify-center gap-3 whitespace-nowrap">
+                <a href="https://wa.me/2348032318353?text=Hi%2C%20I'm%20interested%20in%20the%202024%20Toyota%20Land%20Cruiser" target="_blank" rel="noopener noreferrer" class="flex-1 bg-blue-600 hover:bg-blue-500 px-6 sm:px-8 py-4 rounded-lg font-semibold text-base sm:text-lg transition-colors flex items-center justify-center gap-3 whitespace-nowrap">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
                     Contact Us on WhatsApp
                 </a>
-                <a href="inventory.html" class="flex-1 border-2 border-white text-white hover:bg-white hover:text-gray-900 px-6 sm:px-8 py-4 rounded-lg font-semibold text-base sm:text-lg transition-colors flex items-center justify-center gap-3 whitespace-nowrap">
+                <a href="inventory.html" class="flex-1 bg-gray-800 hover:bg-gray-700 border border-gray-700 text-white px-6 sm:px-8 py-4 rounded-lg font-semibold text-base sm:text-lg transition-all duration-300 flex items-center justify-center gap-3 whitespace-nowrap">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                     Back to Inventory
                 </a>
