--- a/Inventory page/car-details-g63.html
+++ b/Inventory page/car-details-g63.html
@@ -26,8 +26,11 @@
       };
     </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
         body {
+            font-family: 'Inter', sans-serif;
+        }
+        .font-display {
             font-family: 'Inter', sans-serif;
         }
         .glass-effect {
