--- a/Inventory page/inventory.html
+++ b/Inventory page/inventory.html
@@ -26,12 +26,12 @@
       };
     </script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
         body {
             font-family: 'Inter', sans-serif;
         }
         .font-display {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Inter', sans-serif;
         }
         @keyframes float {
             0%, 100% { transform: translateY(0px); }
@@ -158,7 +158,7 @@
                     </span>
                 </div>
                 <h1 class="font-display text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-bold mb-4 sm:mb-6">
-                    <span class="gradient-text">Current</span> Inventory
+                    <span class="gradient-text">Current Inventory</span>
                 </h1>
                 <p class="text-gray-300 text-base sm:text-lg md:text-xl max-w-3xl mx-auto leading-relaxed">
                     Explore our hand-picked selection of the world's most desirable automobiles. Each vehicle comes with a comprehensive history and inspection report.
