--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
         <div class="absolute inset-0 bg-gradient-to-r from-gray-900 via-gray-900/95 to-gray-900/80 z-10"></div>
         
         <!-- Moving Vehicles - Covering Whole Hero Section -->
-        <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[100vw] h-[90vh] sm:w-[110vw] sm:h-[95vh] md:w-[120vw] md:h-[100vh] lg:w-[130vw] lg:h-[110vh] z-15 animate-drive opacity-80">
+        <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[150vw] h-[100vh] sm:w-[140vw] sm:h-[105vh] md:w-[130vw] md:h-[110vh] lg:w-[120vw] lg:h-[115vh] z-15 animate-drive opacity-80">
             <img src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80" 
                  alt="Moving Luxury Vehicle" 
                  class="w-full h-full object-cover filter drop-shadow-[0_20px_50px_rgba(0,0,0,0.8)] brightness-110"
                  style="transform: perspective(1000px) rotateY(-8deg) rotateX(2deg);">
         </div>
-        <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[95vw] h-[85vh] sm:w-[105vw] sm:h-[90vh] md:w-[115vw] md:h-[95vh] lg:w-[125vw] lg:h-[105vh] z-15 animate-drive-reverse opacity-70">
+        <div class="absolute top-1/2 left-0 -translate-y-1/2 w-[145vw] h-[95vh] sm:w-[135vw] sm:h-[100vh] md:w-[125vw] md:h-[105vh] lg:w-[115vw] lg:h-[110vh] z-15 animate-drive-reverse opacity-70">
             <img src="https://images.unsplash.com/photo-1606664515524-ed2f786a0bd6?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80" 
                  alt="Moving Vehicle" 
                  class="w-full h-full object-cover filter drop-shadow-[0_20px_50px_rgba(0,0,0,0.8)] brightness-110"
@@ -237,12 +237,8 @@
                         <span class="relative z-10">View Inventory</span>
                         <div class="absolute inset-0 shimmer opacity-0 group-hover:opacity-100 transition-opacity"></div>
                     </a>
-                    <a href="../Contactus/contactus.html" class="group inline-flex items-center justify-center relative overflow-hidden bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 px-6 py-3 sm:px-8 sm:py-4 rounded-lg font-semibold text-base sm:text-lg transition-all duration-300 shadow-lg shadow-blue-500/50 hover:shadow-xl hover:shadow-blue-500/60 hover:scale-105 text-white gap-2">
-                        <span class="relative z-10">Contact Us</span>
-                        <svg class="w-5 h-5 transition-transform group-hover:translate-x-1 relative z-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                        </svg>
-                        <div class="absolute inset-0 shimmer opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                    <a href="../Contactus/contactus.html" class="inline-flex items-center justify-center bg-gray-800 hover:bg-gray-700 border border-gray-700 text-white px-6 py-3 sm:px-8 sm:py-4 rounded-lg font-semibold text-base sm:text-lg transition-all duration-300">
+                        Contact Us
                     </a>
                 </div>
             </div>
