--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pchris Autos - Premium Automotive Collection</title>
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixlib=rb-4.0.3&auto=format&fit=crop&w=3000&q=80" crossorigin>
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1606664515524-ed2f786a0bd6?ixlib=rb-4.0.3&auto=format&fit=crop&w=3000&q=80" crossorigin>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
